--- a/N Days of Data Science.ipynb
+++ b/N Days of Data Science.ipynb
@@ -374,6 +374,84 @@
     "\n",
     "I shall try tunning the titanic model tomorrow. e.g. adding in regulation terms, scale fare var etc."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 42 | Nothing much\n",
+    "\n",
+    "Only shifted some parts of the code and did feature scaling for the titanic project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 43 | Week 7 ML - SVM\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's a bit hard to comprehend..Need to read more and watch more videos to further understand. My takeaways include: 1. SVN tries to leave larger margin (as compared to logistic regression with clear cutoff point at 0, the cut of for SVM are 1 and -1). 2. We should try to make the margins larger, thus we need to make the projection of x to $\\theta$ larger (which is the same as the 'margin'.) 3. need to scale before modelling. 4. the linear (no kernel) svm and the Gaussian kernal are the most widely used ones. 4. features in svm: c and $\\sigma$. the larger the c, the higher the variance. the higher the $\\sigma$, the lower the variance. 5. svm only has global minimum, Andrew also mentioned the application senarios of when logistic regression/svm with no kernal is more suitable vs, svm with gaussian kernel. When he was explainaing the svm decision boundary (using the projection method), i was reminded of the normal equation. I need to review and understand further about both parts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 44 | Week 8 K-means and PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[K-means clustering](https://d3c33hcgiwev3.cloudfront.net/_0104e918fbf0762326a187fdcf615f9d_Lecture13.pdf?Expires=1592524800&Signature=JmE1SvOHvnLYSK2spxUeet7K54bxQNzNULWuBhq-qngmSilDeVsy-GSuIbNKcd62Ox~YXVY0EClRUsaYSN4Hif3S4nni643UEtqi7F1IEVIizpezE1IZ653gTa-loheb9rVci1Yzxzgr3qHbx1EXG6dYA7QecfTOiEqsY~r70is_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A)\n",
+    "- the random initialization can largely affect the outcome, when k is relatively small. With bad initialization, the cost function outcome may stuck at bad local minimal. Thus, we should try a few different random initializations, which can give us much better results.\n",
+    "- k-menas - elbow line chart is actually cost function against k\n",
+    "- can use domain knowledge or elbow method to decide k, but there is no definite answer.\n",
+    "- adding instances and update centriod is the same as finding the centroids that minimises the distances\n",
+    "- need to scale the features for k-means\n",
+    "\n",
+    "[Principle Component Analysis (PCA)](https://d3c33hcgiwev3.cloudfront.net/_a5935af6cf0625a072cb6e2962e4a47f_Lecture14.pdf?Expires=1592524800&Signature=jBzFRfZBprHx6go1R4jAEdbFlaNXKKi31fJUN4986RhkioJToxz7pMAmtmzEYz8Wpvo2ipL6HXPnMEt8IK724fNrc0VvBygbvdvIP85kHYgp-Fo0-0KoU3VXYS7tgDo91C33Udnr0EH6Uj8GWowWHUERoTLqVBIXh7~CrKsms2w_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A)\n",
+    "- idea of PCA is actually projecting the data from high dimension to low dimension e.g. instead of so many features about the citizen wellbeing, it may be replaced with the citizen wellbeing feature.\n",
+    "- can use % of varaince to decide k (no. of dimensions)\n",
+    "- try to minimise the projection error\n",
+    "- need to do feature scaling/mean normalization before dimension reduction\n",
+    "- PCA is only performed to training sets, not cv or test sets.\n",
+    "- good use of PCA: compress data for storage, speed up algorithm, visualization (2d/3d)\n",
+    "- bad application of PCA - to address overfitting as it may throw out useful info (it reduces dimensiions without considering the effects of relationship with y)\n",
+    "- before using PCA, try on the original data first. Only use it when PCA is necessary (not to begin with)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 45 | Week 9 Anomaly detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Watched videos about [anomaly detection](https://d3c33hcgiwev3.cloudfront.net/_76dc0f4717572c816be29a39cdd2237a_Lecture15.pdf?Expires=1592611200&Signature=H-q5Xfv7xfVGLlP9HqYG0LW3j0v915~E9REOnHFHBz1OgSbFknAJmd3egUfw0wQXc7qDJNtRFBjpLw5e6El5agupjw~tuaZikh7BTI-4Z6UB0cDw~XzftEgorDLOLadeitcoqRrfBsk1adRNnpajJlRBBEIZ8cdyzxLKBv-SYg0_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A) and had an idea about the algorithm and its difference between classification problems. I also understand more about how ML and stats have different perspectives. Everything in ML boils down to cost function, distribution, parameter estimation.\n",
+    "\n",
+    "Anomaly detection is a unsupervised learning. How it is different from classification is that, there are very small no. of positive samples (0-20) and there could be different types of anomalis. In this case, there are not enough positve cases for supervised learning methods to learn and there might not be similar patterns for the positive samples in the training sets.\n",
+    "\n",
+    "The anomily detection algorithm is actually Gaussian. and the decision criteria is whether the product of the probabilities of the features are smaller than a certain thredshold.\n",
+    "\n",
+    "\n",
+    "When developing the model, we use **all the negative examples** in the training set and spread the positive samples in the cv and test sets for detection. and we still use recall/precision/F1 as evaluation metrices. Accuracy is out as the data is highly imbalanced.\n",
+    "\n",
+    "In practical, when the feature do not follow guassian, we normalize it using log or ^0.5/0.2. \n",
+    "\n",
+    "There are cases when both of features still fall into reasonale p ranges, however, the combinations in the axis is very abnormal. i.e. the rest of the points representing feature A and B show high positive correlation while that one has too high an A feature and too low a B feature. In that case, we should create a third feature A/B to capture the anomaly. Alternatively, we can use maltivariate Gaussian that automatically capture the correlation between features.\n"
+   ]
   }
  ],
  "metadata": {
