--- a/Hackerrank Tricks.ipynb
+++ b/Hackerrank Tricks.ipynb
@@ -236,6 +236,70 @@
     "    query_name = input()\n",
     "    print(round(Decimal(mean(student_marks[query_name])), 2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eb4cd47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# swapcase() & for letters in s & letter.upper() & +=\n",
+    "def swap_case(s):\n",
+    "    #return s.swapcase()\n",
+    "    result = \"\"\n",
+    "    for letter in s:\n",
+    "        if letter == letter.upper():\n",
+    "            result += letter.lower()\n",
+    "        else:\n",
+    "            result += letter.upper()\n",
+    "    return result "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e85b3971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change a b c d e to a-b-c-d-e\n",
+    "# string - replace & .join & split\n",
+    "def split_and_join(line):\n",
+    "    # write your code here\n",
+    "    # return line.replace(\" \", \"-\")\n",
+    "    return \"-\".join(line.split(\" \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a833135b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print with vars - just use +\n",
+    "def print_full_name(first, last):\n",
+    "    # Write your code here\n",
+    "    print(\"Hello \" + first + \" \" + last + \"! You just delved into python.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3696ede7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add a character in nth position of a string\n",
+    "# split string into letters and join back to string\n",
+    "# list() to a string, indexing & slice a string\n",
+    "def mutate_string(string, position, character):\n",
+    "    # return string[:position] + character + string[position + 1:]\n",
+    "    l = list(string)\n",
+    "    l[position] = character\n",
+    "    return \"\".join(l)\n"
+   ]
   }
  ],
  "metadata": {
